--- a/po/de.po
+++ b/po/de.po
@@ -7,14 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"PO-Revision-Date: 2025-03-08 10:05+0000\n"
+"Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/"
+"de-swsnr-picture-of-the-day/de-swsnr-picture-of-the-day/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 5.10.2\n"
 
 #. Translators: Do feel free to translate the application name
 #: de.swsnr.picture-of-the-day.desktop.in:4
@@ -24,12 +26,12 @@ msgstr ""
 #: de.swsnr.picture-of-the-day.desktop.in:5
 #: resources/de.swsnr.picture-of-the-day.metainfo.xml.in:6
 msgid "A daily picture as your wallpaper"
-msgstr ""
+msgstr "Ein tägliches Bild als Bildschirmhintergrund"
 
 #. Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 #: de.swsnr.picture-of-the-day.desktop.in:11
 msgid "Gnome;GTK;Picture;Day;Wallpaper;"
-msgstr ""
+msgstr "Gnome;GTK;Bild;Tag;Bildschirmhintergrund;"
 
 #: de.swsnr.picture-of-the-day.desktop.in:18
 msgid "Add new device"
@@ -38,7 +40,7 @@ msgstr ""
 #: resources/de.swsnr.picture-of-the-day.metainfo.xml.in:5
 #: resources/ui/application-window.blp:9
 msgid "Picture Of The Day"
-msgstr ""
+msgstr "Bild des Tages"
 
 #: resources/de.swsnr.picture-of-the-day.metainfo.xml.in:8
 msgid ""
