Update translation German
Translated with Weblate.

Currently translated at 78.4% (73 of 93 strings)

Translation: Picture Of The Day/Picture Of The Day
Translate-URL: https://translate.codeberg.org/projects/de-swsnr-picture-of-the-day/de-swsnr-picture-of-the-day/de/

--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-03-08 10:30+0000\n"
+"PO-Revision-Date: 2025-03-08 10:32+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
 "Language-Team: German <https://translate.codeberg.org/projects/"
 "de-swsnr-picture-of-the-day/de-swsnr-picture-of-the-day/de/>\n"
@@ -411,6 +411,10 @@ msgid ""
 "following message: %2.  The system appears to have limited network "
 "connectivity.  Try to connect to the internet."
 msgstr ""
+"Ein I/O Fehler ist aufgetreten beim Anruf des heutigen Bildes von %1, mit "
+"der folgenden Fehlermeldung: %2. Dein System scheint nur eingeschränkte "
+"Verbindung zum Netzwerk zu haben. Versuche, Dein System mit dem Internet zu "
+"verbinden."
 
 #: src/app/model/error_notification.rs:157
 msgctxt "error-notification.description"
