Update translation German
Translated with Weblate.

Currently translated at 79.5% (74 of 93 strings)

Translation: Picture Of The Day/Picture Of The Day
Translate-URL: https://translate.codeberg.org/projects/de-swsnr-picture-of-the-day/de-swsnr-picture-of-the-day/de/

--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-03-08 10:32+0000\n"
+"PO-Revision-Date: 2025-03-08 10:33+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
 "Language-Team: German <https://translate.codeberg.org/projects/"
 "de-swsnr-picture-of-the-day/de-swsnr-picture-of-the-day/de/>\n"
@@ -422,6 +422,8 @@ msgid ""
 "An I/O error occurred while fetching today's image from %1, with the "
 "following message: %2."
 msgstr ""
+"Ein I/O Fehler ist aufgetreten beim Anruf des heutigen Bildes von %1, mit "
+"der folgenden Fehlermeldung: %2."
 
 #: src/app/widgets/application_window.rs:64
 msgctxt "error-notification.description"
