--- a/po/de.po
+++ b/po/de.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-03-08 10:48+0000\n"
+"PO-Revision-Date: 2025-03-08 11:32+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
-"picture-of-the-day/de-swsnr-picture-of-the-day/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -68,11 +68,6 @@ msgid "Wikimedia Picture Of The Day"
 msgstr "Wikimedia Bild des Tages"
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:16
-#, fuzzy
-#| msgid ""
-#| "Note that all images are protected by copyright; you may not be allowed "
-#| "to use or distribute them. Do take a look at the license terms for each "
-#| "image."
 msgid ""
 "Note that all images are protected by copyright; you may not be allowed to "
 "use or distribute them. Do take a look at the license terms for each image."
