Update translation German
Translated with Weblate.

Currently translated at 100.0% (97 of 97 strings)

Co-authored-by: Sebastian Wiesner <sebastian@swsnr.de>
Translate-URL: https://translate.codeberg.org/projects/de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/
Translation: Picture Of The Day/Picture Of The Day

--- a/po/de.po
+++ b/po/de.po
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-03-08 13:44+0000\n"
+"PO-Revision-Date: 2025-03-08 14:24+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -97,12 +97,16 @@ msgid ""
 "The initial release, with four sources: APOD, Wikimedia, Simon Stålenhag, "
 "and Bing."
 msgstr ""
+"Die erste Veröffentlichung mit vier Bildquellen: APOD, Wikimedia, Simon "
+"Stålenhag, und Bing."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:48
 msgid ""
 "Add a main window to show today's picture of the day and a button to set it "
 "as current wallpaper."
 msgstr ""
+"Ein Hauptfenster zur Anzeige des heutigen Bildes sowie eine Schaltfläche zum "
+"Setzen des Hintergrundbildes wurden hinzugefügt."
 
 #: resources/de.swsnr.pictureoftheday.metainfo.xml.in:60
 msgid "A picture of the day from Wikimedia"
