--- a/po/de.po
+++ b/po/de.po
@@ -9,8 +9,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2025-03-08 13:44+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/"
-"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
+"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -92,11 +92,23 @@ msgstr "Astronomie"
 msgid "Artwork"
 msgstr "Kunstwerk"
 
-#: resources/de.swsnr.pictureoftheday.metainfo.xml.in:58
+#: resources/de.swsnr.pictureoftheday.metainfo.xml.in:47
+msgid ""
+"The initial release, with four sources: APOD, Wikimedia, Simon Stålenhag, "
+"and Bing."
+msgstr ""
+
+#: resources/de.swsnr.pictureoftheday.metainfo.xml.in:48
+msgid ""
+"Add a main window to show today's picture of the day and a button to set it "
+"as current wallpaper."
+msgstr ""
+
+#: resources/de.swsnr.pictureoftheday.metainfo.xml.in:60
 msgid "A picture of the day from Wikimedia"
 msgstr "Das Bild des Tages von Wikimedia"
 
-#: resources/de.swsnr.pictureoftheday.metainfo.xml.in:62
+#: resources/de.swsnr.pictureoftheday.metainfo.xml.in:64
 msgid "The empty greeting page with the application icon"
 msgstr "Die leere Startseite mit dem Anwendungssymbol"
 
